# ndyndns

./: CHANGES  CMakeLists.txt  ChangeLog  DESIGN  LICENSE  Makefile  Makefile.in  README  UPGRADING  bsd.c  bsd.h  cfg.c  cfg.h  checkip.c  checkip.h  chroot.c  chroot.h  config.c  config.h  config.h.in  configure.in  defines.h  dns_dyn.c  dns_dyn.h  dns_he.c  dns_he.h  dns_helpers.c  dns_helpers.h  dns_nc.c  dns_nc.h  linux.c  linux.h  log.c  log.h  ndyndns.c  ndyndns.h  nstrl.c  nstrl.h  pidfile.c  pidfile.h  (+8 more)
ndyndns/: Makefile.in
