AC_INIT(ndyndns, 1.14)
AC_CONFIG_HEADER(config.h)

AC_PROG_CC
AC_LANG_C

AC_PROG_MAKE_SET

AC_HEADER_STDC
AC_CHECK_FUNCS(strlcpy strlcat)

# NOTE: the only reason we test for Linux is that glibc <= 2.5 includes an
# implementation of getifaddrs() that is buggy and will not provide a proper
# ifa_addr for ppp devices.  Thus, we're forced to use ioctl() directly on
# Linux/glibc.
UNAME=`uname -s`
if test x"$UNAME" = xLinux; then
    PLATFORM=linux
else
    AC_CHECK_HEADER(ifaddrs.h,PLATFORM=bsd)
    if test x"$UNAME" = xSolaris; then
	PLATFORM=sun
    fi
fi
AC_SUBST(PLATFORM)

CURLINC=-I`curl-config --prefix`/include
AC_SUBST(CURLINC)
CURLLIB=`curl-config --libs`
AC_SUBST(CURLLIB)

VERSION="1.14"
AC_SUBST(VERSION)

AC_OUTPUT(Makefile)

